# SandModel

./: CMakeLists.txt
src/: main.cpp
src/libs/argsParser/: methods.cpp  parser.h
src/libs/bmpLib/: bmp.h  methods.cpp
src/libs/customStringBuf/: methods.cpp  strBuf.h
src/libs/sandModel/: methods.cpp  sand.h
